--- a/day19-understanding-your-data-descriptive-stats/day19.ipynb
+++ b/day19-understanding-your-data-descriptive-stats/day19.ipynb
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -516,144 +516,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2500</td>\n",
+       "      <th>PassengerId</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>-0.035144</td>\n",
+       "      <td>0.036847</td>\n",
+       "      <td>-0.057527</td>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.012658</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>71.2833</td>\n",
+       "      <th>Survived</th>\n",
+       "      <td>-0.005007</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.338481</td>\n",
+       "      <td>-0.077221</td>\n",
+       "      <td>-0.035322</td>\n",
+       "      <td>0.081629</td>\n",
+       "      <td>0.257307</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
+       "      <th>Pclass</th>\n",
+       "      <td>-0.035144</td>\n",
+       "      <td>-0.338481</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.369226</td>\n",
+       "      <td>0.083081</td>\n",
+       "      <td>0.018443</td>\n",
+       "      <td>-0.549500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53.1000</td>\n",
+       "      <th>Age</th>\n",
+       "      <td>0.036847</td>\n",
+       "      <td>-0.077221</td>\n",
+       "      <td>-0.369226</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>-0.308247</td>\n",
+       "      <td>-0.189119</td>\n",
+       "      <td>0.096067</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>35.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
+       "      <th>SibSp</th>\n",
+       "      <td>-0.057527</td>\n",
+       "      <td>-0.035322</td>\n",
+       "      <td>0.083081</td>\n",
+       "      <td>-0.308247</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.414838</td>\n",
+       "      <td>0.159651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
+       "      <th>Parch</th>\n",
+       "      <td>-0.001652</td>\n",
+       "      <td>0.081629</td>\n",
+       "      <td>0.018443</td>\n",
+       "      <td>-0.189119</td>\n",
+       "      <td>0.414838</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.216225</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>886</th>\n",
-       "      <td>887</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>13.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>887</th>\n",
-       "      <td>888</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>888</th>\n",
-       "      <td>889</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>23.4500</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>889</th>\n",
-       "      <td>890</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.0000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>890</th>\n",
-       "      <td>891</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.7500</td>\n",
+       "      <th>Fare</th>\n",
+       "      <td>0.012658</td>\n",
+       "      <td>0.257307</td>\n",
+       "      <td>-0.549500</td>\n",
+       "      <td>0.096067</td>\n",
+       "      <td>0.159651</td>\n",
+       "      <td>0.216225</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>891 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     PassengerId  Survived  Pclass   Age  SibSp  Parch     Fare\n",
-       "0              1         0       3  22.0      1      0   7.2500\n",
-       "1              2         1       1  38.0      1      0  71.2833\n",
-       "2              3         1       3  26.0      0      0   7.9250\n",
-       "3              4         1       1  35.0      1      0  53.1000\n",
-       "4              5         0       3  35.0      0      0   8.0500\n",
-       "..           ...       ...     ...   ...    ...    ...      ...\n",
-       "886          887         0       2  27.0      0      0  13.0000\n",
-       "887          888         1       1  19.0      0      0  30.0000\n",
-       "888          889         0       3   NaN      1      2  23.4500\n",
-       "889          890         1       1  26.0      0      0  30.0000\n",
-       "890          891         0       3  32.0      0      0   7.7500\n",
+       "             PassengerId  Survived    Pclass       Age     SibSp     Parch  \\\n",
+       "PassengerId     1.000000 -0.005007 -0.035144  0.036847 -0.057527 -0.001652   \n",
+       "Survived       -0.005007  1.000000 -0.338481 -0.077221 -0.035322  0.081629   \n",
+       "Pclass         -0.035144 -0.338481  1.000000 -0.369226  0.083081  0.018443   \n",
+       "Age             0.036847 -0.077221 -0.369226  1.000000 -0.308247 -0.189119   \n",
+       "SibSp          -0.057527 -0.035322  0.083081 -0.308247  1.000000  0.414838   \n",
+       "Parch          -0.001652  0.081629  0.018443 -0.189119  0.414838  1.000000   \n",
+       "Fare            0.012658  0.257307 -0.549500  0.096067  0.159651  0.216225   \n",
        "\n",
-       "[891 rows x 7 columns]"
+       "                 Fare  \n",
+       "PassengerId  0.012658  \n",
+       "Survived     0.257307  \n",
+       "Pclass      -0.549500  \n",
+       "Age          0.096067  \n",
+       "SibSp        0.159651  \n",
+       "Parch        0.216225  \n",
+       "Fare         1.000000  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "numeric_df"
+    "numeric_df.corr()"
    ]
   },
   {
